# phemis

./: ARCHITECTURE.md  ASK_COMMAND_README.md  CLI_README.md  CONTRIBUTING.md  OPENROUTER_README.md  README.md  SCHEMA_README.md  example_ask_usage.py  example_openrouter.py  example_usage.py  pyproject.toml  requirements.txt  setup.py  test_ask.py  test_cli.py  test_openrouter.py  test_schema.py
docs/: BUDGET_MANAGEMENT.md  COMMANDS_REFERENCE.md  GETTING_STARTED.md  SESSIONS_GUIDE.md
examples/: example_basic_chat.py  example_batch_questions.py  example_model_comparison.py  example_session_analysis.py
llm/: __init__.py
llm/cli/: __init__.py  ask.py  chat.py  main.py  models.py  sessions.py
llm/core/: __init__.py  cost.py  provider_openrouter.py  schema.py  session.py  storage.py  utils.py
llm_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
runs/: openai-gpt-4o-mini-20250808-220432.json
