[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cli"
version = "0.1.0"
description = "A CLI tool for interacting with OpenRouter API"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer",
    "rich",
    "requests",
    "pydantic",
    "tenacity",
]

[project.scripts]
llm = "llm.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/llm-cli"
Repository = "https://github.com/yourusername/llm-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm*"]

[tool.setuptools.package-data]
llm = ["py.typed"]